FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
FIND_PACKAGE(SDL_ttf REQUIRED)
FIND_PACKAGE(SDL_net REQUIRED)
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR} ${SDLIMAGE_INCLUDE_DIR} ${SDLTTF_INCLUDE_DIR} ${SDLNET_INCLUDE_DIR} ${SDLMIXER_INCLUDE_DIR} ../network)
LINK_LIBRARIES(${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} ${SDLNET_LIBRARY} ${SDLMAIN_LIBRARY} ${SDLMIXER_LIBRARY})

FILE(GLOB source_files "*.cpp")
FILE(GLOB network_files "../network/*.cpp")

ADD_EXECUTABLE(brclient-sdl ${source_files} ${network_files})

ADD_EXECUTABLE(brclient-sdl ${source_files})
